--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "npm run build && node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
